--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <main class="container">
-<h1 class="row">Match Game</h1>
+<h1 class="row">Match Game (test)</h1>
 <div class="row">
     <img id=card1 value=1 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
     <img id=card2 value=2 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
