--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <main class="container">
 <h1 class="row">Match Game</h1>
 <div class="row">
-    <img id=card1 value=1 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
-    <img id=card2 value=2 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
+    <img id="card1" value=1 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
+    <img id="card2" value=2 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">  
 </div>
 <div class="row">
-        <img id=card3 value=2 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
-        <img id=card4 value=1 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
+        <img id="card3" value=2 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
+        <img id="card4" value=1 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
 </div>
+<img id=kittens src="assets/images/kittens.jpg">
 
 </main>   
 </body>
