--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 </head>
 <body>
 <main class="container">
-<h1 class="row">Match Game</h1>
+<h1 id="head" class="row">Match Game</h1>
 <div class="row">
-    <img id="card1" value=1 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
-    <img id="card2" value=2 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">  
+    <img id="card1" value=1 src="assets/images/card-back.png" class="btn play-card">
+    <img id="card2" value=2 src="assets/images/card-back.png" class="btn play-card">  
 </div>
 <div class="row">
-        <img id="card3" value=2 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
-        <img id="card4" value=1 src="assets/images/card-back.png" class="btn play-card" style="height: 250px; width: 200px;">
+        <img id="card3" value=2 src="assets/images/card-back.png" class="btn play-card">
+        <img id="card4" value=1 src="assets/images/card-back.png" class="btn play-card">
 </div>
+<h2 id="win-box" class="row"></h2>
 <img id=kittens src="assets/images/kittens.jpg">
 
 </main>   
