increased number of cards and added reset button

--- a/index.html
+++ b/index.html
@@ -11,17 +11,47 @@
 </head>
 <body>
 <main class="container">
-<h1 id="head" class="row">Match Game</h1>
 <div class="row">
-    <img id="card1" value=1 src="assets/images/card-back.png" class="btn play-card">
-    <img id="card2" value=2 src="assets/images/card-back.png" class="btn play-card">  
+    <h1 id="head">Match Game</h1> <button id="new-game" class="btn">New Game</button><h2 id="win-box"></h2>
 </div>
 <div class="row">
-        <img id="card3" value=2 src="assets/images/card-back.png" class="btn play-card">
-        <img id="card4" value=1 src="assets/images/card-back.png" class="btn play-card">
+    <img id="card1"  class="btn play-card">
+    <img id="card2"  class="btn play-card"> 
+    <img id="card3"  class="btn play-card">
+    <img id="card4"  class="btn play-card">
+    <img id="card5"  class="btn play-card">
+    <img id="card6"  class="btn play-card">
+    <img id="card7"  class="btn play-card">
 </div>
-<h2 id="win-box" class="row"></h2>
-<img id=kittens src="assets/images/kittens.jpg">
+<div class="row">
+    <img id="card8"  class="btn play-card">
+    <img id="card9"  class="btn play-card"> 
+    <img id="card10"  class="btn play-card">
+    <img id="card11"  class="btn play-card">
+    <img id="card12"  class="btn play-card">
+    <img id="card13"  class="btn play-card">
+    <img id="card14"  class="btn play-card">
+</div>
+<div class="row">
+    <img id="card15"  class="btn play-card">
+    <img id="card16"  class="btn play-card"> 
+    <img id="card17"  class="btn play-card">
+    <img id="card18"  class="btn play-card">
+    <img id="card19"  class="btn play-card">
+    <img id="card20"  class="btn play-card">
+    <img id="card21"  class="btn play-card">
+</div>
+<div class="row">
+    <img id="card22"  class="btn play-card">
+    <img id="card23"  class="btn play-card"> 
+    <img id="card24"  class="btn play-card">
+    <img id="card25"  class="btn play-card">
+    <img id="card26"  class="btn play-card">
+    <img id="card27"  class="btn play-card">
+    <img id="card28"  class="btn play-card">
+</div>
+
+
 
 </main>   
 </body>
