--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-    <title>Match Game</title>
+    <title>Memory Game</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
      crossorigin="anonymous">
@@ -12,7 +12,7 @@
 <body>
 <main class="container">
 <div class="row">
-    <h1 id="head">Match Game</h1> <button id="new-game" class="btn">New Game</button><h2 id="win-box"></h2>
+    <h1 id="head">Memory Game</h1> <button id="new-game" class="btn">New Game</button><h2 id="win-box"></h2>
 </div>
 <div class="row">
     <img id="card1"  class="btn play-card">
